# scout

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  linters.yml  publish.yml  rust.yml  tests.yml
ci/: before_deploy.sh  install.sh  script.sh
src/: bin.rs  broadcast.rs  common.rs  config.rs  conveyor.rs  core.rs  data_input.rs  engine.rs  events.rs  fuzzy.rs  input.rs  interactions.rs  lib.rs  macros.rs  main.rs  output.rs  person_input.rs  pipe.rs  ptty.rs  screen.rs  state.rs  supervisor.rs  surroundings.rs  terminal_size.rs  tty.rs  ui.rs
src/config/: components.rs  styling.rs
src/fuzzy/: predicates.rs  scoring.rs  types.rs
src/scout/: choice.rs  errors.rs  explore.rs  lib.rs  pattern.rs  refine.rs  score.rs  scout.rs  terminal.rs  terminal_size.rs  ui.rs
src/scout/ui/: action.rs  line.rs  mod.rs  window.rs
src/ui/: components.rs  convert.rs  painting.rs
src/ui/components/: component.rs  gauge.rs  list.rs  prompt.rs
tests/: fuzzy_search_test.rs
