[package]
name = "scout"
version = "2.0.0"
authors = ["Juan Hernández <juan.hernandez.babon@gmail.com>"]
description = "Small fuzzy finder for the command line"
homepage = "https://github.com/jhbabon/scout"
repository = "https://github.com/jhbabon/scout"
readme = "README.md"
keywords = ["scout", "fuzzy", "fuzzyfinder", "cli", "async"]
license = "MIT"
edition = "2018"
exclude = [
  "media/*",
  ".github/*",
]

[lib]
name = "scout"
path = "src/lib.rs"

[[bin]]
name = "scout"
path = "src/main.rs"
doc = false
test = false

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
async-std = { version = "1.5", features = ["unstable"] }
futures-timer = "3.0.2"
termios = "0.3.1"
termion = "1.5.3"
log = "0.4.8"
env_logger = "0.7.0"
rayon = "1.3.0"
libc = "0.2.65"
clap = "2.33.0"
serde = { version = "1.0.101", features = ["derive"] }
ansi_term = "0.12.1"
lazy_static = "1.4.0"
toml = "0.5.5"
unicode-segmentation = "1.6.0"
dirs = "2.0.2"
