[package]
name = "scout"
version = "2.7.0"
authors = ["Juan Hernández <juan.hernandez.babon@gmail.com>"]
description = "Friendly fuzzy finder for the command line"
homepage = "https://github.com/jhbabon/scout"
repository = "https://github.com/jhbabon/scout"
readme = "README.md"
keywords = ["scout", "fuzzy", "fuzzyfinder", "cli", "async"]
license = "MIT"
edition = "2021"
rust-version = "1.58"
exclude = [
  "media/*",
  ".github/*",
]

[profile.release]
lto = true
codegen-units = 1

[lib]
name = "scout"
path = "src/lib.rs"

[[bin]]
name = "scout"
path = "src/main.rs"
doc = false
test = false

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
async-std = { version = "1.12", features = ["unstable"] }
futures-timer = "3.0.2"
termios = "0.3.1"
termion = "1.5.3"
log = "0.4.17"
env_logger = "0.10.0"
rayon = "1.5.3"
libc = "0.2.139"
pico-args = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
ansi_term = "0.12.1"
lazy_static = "1.4.0"
toml = "0.6.0"
unicode-segmentation = "1.10.0"
dirs = "4.0.0"
